src/tui/widgets/snapshots/patui__tui__widgets__scrollable_area__tests__simple_navigation.snap
---
source: src/tui/widgets/scrollable_area.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 30 },
    content: [
        "Test1                                                      ↑",
        "Test2                                                      █",
        "Test3                                                      █",
        "Test4                                                      █",
        "Test5                                                      █",
        "Test6                                                      █",
        "Test7                                                      █",
        "Test8                                                      █",
        "Test9                                                      █",
        "Test10                                                     █",
        "Test11                                                     █",
        "Test12                                                     █",
        "Test13                                                     █",
        "Test14                                                     █",
        "Test15                                                     ║",
        "Test16                                                     ║",
        "Test17                                                     ║",
        "Test18                                                     ║",
        "Test19                                                     ║",
        "Test20                                                     ║",
        "Test21                                                     ║",
        "Test22                                                     ║",
        "Test23                                                     ║",
        "Test24                                                     ║",
        "Test25                                                     ║",
        "Test26                                                     ║",
        "Test27                                                     ║",
        "Test28                                                     ║",
        "Test29                                                     ║",
        "Test30                                                     ↓",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
