src/tui/widgets/snapshots/patui__tui__widgets__scrollable_area__tests__simple_navigation_with_wrapping_backward.snap
---
source: src/tui/widgets/scrollable_area.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 30 },
    content: [
        "Test37                                                     ↑",
        "Test38                                                     ║",
        "Test39                                                     ║",
        "Test40                                                     ║",
        "Test41                                                     ║",
        "Test42                                                     ║",
        "Test43                                                     ║",
        "Test44                                                     ║",
        "Test45                                                     ║",
        "Test46                                                     ║",
        "Test47                                                     ║",
        "Test48                                                     ║",
        "Test49                                                     ║",
        "Test50                                                     ║",
        "Test51                                                     ║",
        "Test52                                                     ║",
        "Test53                                                     █",
        "Test54                                                     █",
        "Test55                                                     █",
        "Test56                                                     █",
        "Test57                                                     █",
        "Test58                                                     █",
        "Test59                                                     █",
        "Test60                                                     █",
        "Test61                                                     █",
        "Test62                                                     █",
        "Test63                                                     █",
        "Test64                                                     █",
        "Test65                                                     █",
        "Test66                                                     ↓",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 59, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
