src/tui/widgets/snapshots/patui__tui__widgets__scrollable_area__tests__simple_render_block.snap
---
source: src/tui/widgets/scrollable_area.rs
expression: buffer
---
Buffer {
    area: Rect { x: 2, y: 2, width: 10, height: 10 },
    content: [
        "┌────────┐",
        "│       ↑│",
        "│       █│",
        "│       █│",
        "│       █│",
        "│       █│",
        "│       ║│",
        "│       ║│",
        "│       ↓│",
        "└────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
