src/tui/widgets/snapshots/patui__tui__widgets__scrollable_area__tests__simple_render_block_with_offset.snap
---
source: src/tui/widgets/scrollable_area.rs
expression: buffer
---
Buffer {
    area: Rect { x: 2, y: 2, width: 20, height: 10 },
    content: [
        "┌──────────────────┐",
        "│                 ↑│",
        "│  Test5          ║│",
        "│  Test6          ║│",
        "│  Test7          █│",
        "│  Test8          █│",
        "│  Test9          █│",
        "│  Test10         ║│",
        "│                 ↓│",
        "└──────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
