src/tui/widgets/snapshots/patui__tui__widgets__scrollable_area__tests__single_line_scroll.snap
---
source: src/tui/widgets/scrollable_area.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 5, height: 5 },
    content: [
        "    ↑",
        "    ║",
        "    ║",
        "    █",
        "    ↓",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
